# password-manager

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile-linux  build.sh  readme.md
.github/workflows/: continious-integration.yml  release.yml  rust.yml
app/: Cargo.toml
app/src/: clip_board.rs  config.rs  datastore.rs  main.rs  messages.rs  states.rs  views.rs
app/src/components/: addpassword.rs  app.rs  category.rs  edit.rs  error.rs  list.rs  mod.rs  password.rs  unlock.rs
app/src/events/: addpassword.rs  changecategory.rs  changedescription.rs  changename.rs  changepassword.rs  mod.rs  removepassword.rs
app/src/passphrase/: mod.rs
app/src/states/: passwords.rs
app/src/styles/: category.rs  header.rs  linkbutton.rs  main.rs  mod.rs  password.rs  widget.rs
app/src/translations/: mod.rs  translations.en.json
cli/: Cargo.toml
cli/src/: arguments.rs  main.rs  password.rs
common/: Cargo.toml
common/src/: app.rs  clip_board.rs  filesystem.rs  key.rs  lib.rs  passphrase.rs  password.rs
common/src/words/: adjectives
core/: Cargo.toml
core/src/: clipboard.rs  lib.rs
core/src/events/: addpassword.rs  removepassword.rs
core/src/passphrase/: mod.rs  nouns
core/src/states/: mod.rs  passwords.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
gui/: Cargo.toml
gui/src/: main.rs
gui/src/ui/: main.glade  main.rs  mod.rs  new_password.glade  new_password.rs  passphrase.glade  passphrase.rs  passwords.glade  passwords.rs  settings.glade  settings.rs
install/: install.sh  passwordmanager.desktop
